// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`info command basic info test case 1`] = `
[
  {
    "cache": true,
    "cwd": "/some/path/to/a",
    "depSpecs": [
      "build",
    ],
    "dependencies": [
      "a#build",
    ],
    "dependents": [],
    "hash": "c6c367cb4149d14853f7574c42edec1e6e24658c",
    "id": "a#test",
    "label": "a - test",
    "options": {},
    "packageName": "a",
    "priority": 0,
    "task": "test",
    "weight": 1,
  },
  {
    "cache": true,
    "cwd": "/some/path/to/b",
    "depSpecs": [
      "build",
    ],
    "dependencies": [
      "b#build",
    ],
    "dependents": [],
    "hash": "7344652d972368f32593b067b5f0385c5d689674",
    "id": "b#test",
    "label": "b - test",
    "options": {},
    "packageName": "b",
    "priority": 0,
    "task": "test",
    "weight": 1,
  },
  {
    "cache": true,
    "cwd": "/some/path/to/a",
    "depSpecs": [
      "^build",
    ],
    "dependencies": [
      "b#build",
    ],
    "dependents": [
      "a#test",
    ],
    "hash": "6aa6fe4dc3b78aa15e4a97a8c8619f59fe7de883",
    "id": "a#build",
    "label": "a - build",
    "options": {},
    "packageName": "a",
    "priority": 0,
    "task": "build",
    "weight": 1,
  },
  {
    "cache": true,
    "cwd": "/some/path/to/b",
    "depSpecs": [
      "^build",
    ],
    "dependencies": [],
    "dependents": [
      "b#test",
      "a#build",
    ],
    "hash": "4a04237cd9db4143df353ec32d9b8c0db82977e8",
    "id": "b#build",
    "label": "b - build",
    "options": {},
    "packageName": "b",
    "priority": 0,
    "task": "build",
    "weight": 1,
  },
]
`;

exports[`info command scoped info test case 1`] = `
[
  {
    "cache": true,
    "cwd": "/some/path/to/b",
    "depSpecs": [
      "build",
    ],
    "dependencies": [
      "b#build",
    ],
    "dependents": [],
    "hash": "06a7ab1e9202f62b6408631ab726a054228f0619",
    "id": "b#test",
    "label": "b - test",
    "options": {},
    "packageName": "b",
    "priority": 0,
    "task": "test",
    "weight": 1,
  },
  {
    "cache": true,
    "cwd": "/some/path/to/b",
    "depSpecs": [
      "^build",
    ],
    "dependencies": [],
    "dependents": [
      "b#test",
    ],
    "hash": "2d08dda4b28bc97feea37250d6f9721b89e89d39",
    "id": "b#build",
    "label": "b - build",
    "options": {},
    "packageName": "b",
    "priority": 0,
    "task": "build",
    "weight": 1,
  },
]
`;
